identical records with identical names in 2 feds; closes #843